@@ -29,6 +29,7 @@ BuildRequires: python-setuptools
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-buildroot
 BuildArch: noarch
 ExcludeArch: ppc
+ExcludeArch: ppc64
 Url: http://cobbler.et.redhat.com
 
 %description
